Header on Mobile Fixed

--- a/src/mediaQuery.css
+++ b/src/mediaQuery.css
@@ -79,41 +79,61 @@
       justify-items: center;
     }
   }
-.newsletter{
-  column-span: 1/9 !important;
+  .newsletter {
+    column-span: 1/9 !important;
+  }
 }
-
-}
-
-
-
 
 /* 320px — 480px: Mobile devices. */
-@media (min-width: 481px) {
-  .main-header .container {
+@media (max-width: 480px) {
+  top-header {
+    .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+
+  .main-header {
     padding: 10px 0;
+    .container {
+      height: 20px;
+    }
   }
   .lang-button {
     height: 40px;
   }
-  
+  footer .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: start;
+  }
+
+  .top-header-left-contact,
+  .top-header-right, span {
+    font-size: x-small !important;
+  }
+
+  .lang-button {
+    svg {
+      width: 10px !important;
+      height: 10px !important;
+    }
+  }
 }
+
 /* 481px — 768px: iPads, Tablets. */
 @media (min-width: 768px) {
-  
 }
 
 /* 769px — 1024px: Small screens, laptops. */
-@media(min-width: 1024px) {
-  
+@media (min-width: 1024px) {
 }
 
 /* 1025px — 1200px: Desktops, large screens. */
 @media (min-width: 1200px) {
-  
 }
 
 /* 1201px and more — Extra large screens, TV. */
 @media (min-width: 1201px) {
-  
 }
